<resources>
    <string name="splash_quote">eyewitness app enables you to quickly report an incident, lets you store, sync and share captured incidents that are embedded and encrypted with the metadata needed to support the evidence in a court of law.</string>
    <string name="splash_footer">Made with ♥️ at Ahmadu Bello University</string>
    <string name="spl2_footer">Zaria, Kaduna State, Nigeria</string>
    <string name="spl3_footer">Dinisoft Technology</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="upload_evidence">Upload Evidence</string>
    <string name="report_incident">Report Incident</string>
    <string name="report_type">Select type of Incident</string>
    <string name="report_guide">Address - Location</string>
    <string name="report">Report</string>
    <string name="title_user_email">deenysoft@gmail.com</string>
    <string name="title_user_skype">dinisoft</string>
    <string name="title_user_website">https://dinisoft.dev</string>
    <string name="title_user_version">v1.0.5</string>
    <string name="title_about_us">eyewitness app enables you to quickly report an incident, lets you store, sync and share captured incidents that are embedded and encrypted with the metadata needed to support the evidence in a court of law.</string>
    <string name="title_alert">You are about to report an incident at the following location. Please know that you are giving out the location for authorized access. Kindly adhere to our terms and conditions.</string>
    <string name="title_review">Your report is currently under review. You will be notified when the review process is completed. In the meantime, kindly describe the incident with full details of occurrence.</string>
    <string name="title_occur">Describe the incident with full details of occurrence. (When, Where, What, How, Who, Whom?). (Mandatory)</string>
    <string name="title_reported_info">Nothing to show yet... New incoming complaints will appear here.</string>
    <string name="title_reported_user_info">Nothing to show yet... Your complaints will appear here.</string>
    <string name="title_guide_report_info">Loading...</string>
    <string name="loading">Loading…</string>
    <string name="error_title">Something went wrong!</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="massage_nointernet">Please check your internet connection.</string>
    <string name="massage_error_username">User name is empty</string>
    <string name="massage_error_password">Password is empty</string>
    <string name="massage_error_io">The rocket_web.io is not valid! \nDownload again from dinisoft.dev\n Or contact with author!!</string>
    <string name="massage_exit">Please click BACK again to exit</string>
    <string name="error_details">Error details:</string>
    <string name="unknown_exception">Unknown exception</string>
    <string name="restart_app">Restart app</string>
    <string name="close_app">Close app</string>
    <string name="say_sometin">Say something...</string>
    <string name="welcome_message">Welcome to Eyewitness</string>
    <string name="welcome_motto">The pathway to Justice and Freedom</string>
    <string name="channel_name_n">Neighbourhood</string>
    <string name="channel_description_n">Neighbourhood notification about an incident report</string>
    <string name="channel_name_e">Eyewitness</string>
    <string name="channel_description_e">Eyewitness notification about the status of an incident report</string>
    <string name="journal1_credit">Journal: Tahani Almanie, Rsha Mirza and Elizabeth Lor. University of Colorado, Boulder, USA. Crime Prediction Based On Crime Types And Using Spatial And Temporal Criminal Hotspots. Vol.5, No.4, July 2015.</string>
    <string name="journal2_credit">Journal: Ayuba B., Mugu, B. A., Tanko, H. and Bulus, S. J. Ahmadu Bello University, Zaria, Nigeria. Geo-Spatial Analysis of Crime In Kaduna State Metropolis. Vol.11, No.4, 2016.</string>
    <string name="artwork_credit">Artwork Design: Starline / Stories (Freepik.com)</string>
    <string name="app_developer">App Created By: Shamsudeen A. Muhammed (Jun-Nov, 2021)</string>
    <string name="app_license">Apache License (v2.0): Copyright (2021) Shamsudeen A. Muhammed. You may not use this APP except in compliance with the License. You may obtain a copy of the License at: http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="label_registration">Sign Up</string>
    <string name="label_login_witness">Sign in as an Eyewitness</string>
    <string name="label_login_agency">Sign in as an Agency</string>
    <string name="hint_code">Enter your Mobile No</string>
    <string name="verify_code">Enter Verification Code</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_submit">Submit</string>
    <string name="label_confirm_code">Confirm Code</string>
    <string name="label_signIn">Sign In</string>
    <string name="label_signOut">Sign Out</string>
    <string name="label_verify">Verify</string>
    <string name="label_whoops">Whoops!</string>
    <string name="label_forgotPassword">Forgot password?</string>
    <string name="label_dont_have_account">Don\'t have an account?</string>
    <string name="label_tryAgain">Try again</string>
    <string name="label_go_home">Go home</string>
    <string name="label_off">Off</string>
    <string name="label_close_dialog">Go Back</string>
    <string name="label_file_chooser">File Chooser</string>
    <string name="label_noInternet">No internet found. \n Check your connection or try again!!</string>
    <string name="label_error">Web service url page not found, try again!!</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_case">Case Feed</string>
    <string name="menu_map">Map</string>
    <string name="menu_bot">Assistant</string>
    <string name="menu_complaint">My Complaint</string>
    <string name="menu_review">Reviews</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_about">About</string>
    <string name="menu_theme">Select Theme</string>
    <string name="menu_share">Share</string>
    <string name="menu_upgrade">Buy Storage</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_result">Result</string>
    <string name="menu_verif">Verify</string>
    <string name="menu_social">Visit</string>
    <string name="menu_education">Map</string>
    <string name="menu_game">Games</string>
    <string name="menu_media">Explore</string>
    <string name="menu_red">Red Alarm</string>
    <string name="menu_eye">Eye Lens</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="label_custom_theme_title">Customize your own way</string>
    <string name="label_custom_theme_detail">Rocket web give you the power of better UI customization experience. It\'s easy to choose your own theme style and apply to your project. Based on your UI recruitment choose Toolbar style, left-right button action, app Theme, loader style. After that go back home to see the changes.</string>
    <string name="label_navigation_bar_style">Navigation bar style</string>
    <string name="label_turn_off_bar">Turn Off Navigation Bar</string>
    <string name="label_left_button">Left Button Option</string>
    <string name="label_no_option">No Option</string>
    <string name="label_side_menu">Side Menu</string>
    <string name="label_reload">Reload</string>
    <string name="label_share">Share</string>
    <string name="label_home">Home</string>
    <string name="label_right_button">Right Button Option</string>
    <string name="label_collapse_menu">Collapse Menu</string>
    <string name="label_active_control">Active Control</string>
    <string name="label_share_reload"><![CDATA[Share & Reload]]></string>
    <string name="label_banner">Banner</string>
    <string name="label_interstitial">Interstitial</string>
    <string name="label_video">Video</string>
    <string name="label_color_style">Color Style</string>
    <string name="label_loader_animation">Loader Animation</string>
    <string name="label_back_to_home">Back to Home Page</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="red_list">Red List</string>
    <string name="person_name">Full Name of Person or Victim</string>
    <string name="person_dob">Age or Date of Birth. (Optional)</string>
    <string name="person_height_weight">Height &amp; Weight.(Optional)</string>
    <string name="person_body_type">Body Type. (Optional)</string>
    <string name="person_body_mark">Body Marks/Tatooz. (Optional)</string>
    <string name="person_sex">Sex (Optional)</string>
    <string name="person_race">Race/Ethnicity (Optional)</string>
    <string name="person_hair_type">Hair Type (Optional)</string>
    <string name="person_occupation">Occupation (Optional)</string>
    <string name="person_lastknown_address">Last Known Address (Optional)</string>
    <string name="person_desc">Describe the Person or Victim. (Optional)</string>
    <string name="person_case_details">Details of the case. (Optional)</string>
    <string name="person_case_status">Status e.g Wanted, Missing, Deceased etc. (Mandatory)</string>
    <string name="redlist_title">Seek For Credible Information</string>
    <string name="call_emergency">Call</string>
    <string name="subscribe_agency">Subscribe</string>
    <string name="emergency_action">Action</string>
    <string name="emergency_alert">You are about to make an emergency call. Please know that the visibility of your identity is based on your preference. To change the settings, navigate to your profile and change the visibility status.</string>
    <string name="redlist_alert">You are about to seek for information from the public to assist your agency in conducting investigation. Please know that your campaign will appear on the Red Alarm list which is publicly accessible based on location.</string>
    <string name="withdrawn_case">The following complaint has been withdrawn. Appeal to another agency or kindly delete the complaint from your cloud storage.</string>
    <string name="state_string">State</string>
    <string name="country_string">Country</string>
    <string name="global_string">Global</string>
    <string name="show">Show</string>
    <string name="snooze">Hide</string>
    <string name="channel_1">Misconduct</string>
    <string name="channel_2">Accident</string>
    <string name="channel_3">Theft</string>
    <string name="channel_4">Murder</string>
    <string name="channel_5">Assault</string>
    <string name="channel_6">Firehazard</string>
    <string name="channel_7">Flooding</string>
    <string name="channel_8">Sexual-Assault</string>
    <string name="channel_9">Illegal-Drugs</string>
    <string name="channel_10">Terrorism</string>
    <string name="channel_11">Red-Alarm</string>
    <string name="channel_12">Eye-Lens</string>
    <string name="channel_13">Complaint-Discussion</string>
    <string name="channel_desc">Eyewitness Notification Channel</string>
    <string name="landing_default_message">Nothing to show yet.. your conversations will appear here</string>
    <string name="casefeed_string">Nothing to show yet.. incoming complaints that have been made public will appear here.</string>
    <string name="eyefeed_string">Nothing to show yet.. Eye Lens view reports will appear here.</string>
    <string name="redfeed_string">Nothing to show yet.. Red Alarm reports will appear here.</string>
    <string name="morning">Welcome to Eyewitness Assistant\n Nothing to show yet... Your conversations will appear here.</string>
</resources>